add comments, finish engagement

--- a/N-Gram/FixedMappingVersion/FilesCheck.ipynb
+++ b/N-Gram/FixedMappingVersion/FilesCheck.ipynb
@@ -942,7 +942,7 @@
    "outputs": [],
    "source": [
     "data = []\n",
-    "columns = [\"set_id\", \"np_diff_ids\"]\n",
+    "columns = [\"set_id\", \"file_id\", \"\"]\n",
     "for index, row in df_diffs.iterrows():\n",
     "    dataline = []\n",
     "    set_id = row[\"set_id\"]\n",
