--- a/N-Gram/FixedMappingVersion/FileExtraction.ipynb
+++ b/N-Gram/FixedMappingVersion/FileExtraction.ipynb
@@ -13,6 +13,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##########################################################################\n",
+    "'''\n",
+    "    This file extracts the zip files into folders\n",
+    "'''\n",
+    "##########################################################################"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
